[package]
name = "cloudru"
version = "0.4.7"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.4", default-features = false, features = ["rustls-tls", "blocking", "json"] }
url = "2.4"
serde_json = "1.0.79"
serde-xml-rs = "0.6.0"
serde = "1"
serde_derive = "1"
thiserror = "1.0"
hmac = "0.12.1"
sha2 = "0.10.2"
sha1 = "0.10.5"
base64 = "0.21.2"
phf = { version = "0.11", features = ["macros"] }
tracing = "0.1.40"
rust-ini = "0.18.0"
#mitigating "political code" risks
time = { version = "=0.3.7", features=["macros", "formatting"]}
bytes = "1.5.0"

#for signing
http = "1"
percent-encoding = "2"

[dev-dependencies]
tracing-subscriber = "0.3.18"
#hc = { path = "../hc" }
anyhow = "1.0"
clap = { version = "4.5.4", features = ["derive"] }

